--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,10 @@ bevy = "0.13.0"
 bevy_egui = "0.26.0"
 cpal = "0.15.2"
 crossbeam-channel = "0.5.12"
+egui_plot = "0.26.0"
+ringbuffer = "0.15.0"
 ron = "0.8.1"
+rustfft = "6.2.0"
 serde = "1.0.197"
 thiserror = "1.0.57"
 
